--- a/style.css
+++ b/style.css
@@ -356,9 +356,18 @@ li {
   position: relative;
   overflow: hidden;
   background-image: url(./assets/grids.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* background-position: center;
+  background-repeat: no-repeat; */
+  /* background-size: cover; */
+}
+
+.profile {
+  grid-area: profile;
+  align-items: center;
+  flex-direction: column;
+  padding: 1.5rem 2rem;
+  position: relative;
+  background-image: url(./assets/dot.svg);
 }
 
 .projects .title {
