ajuste imagem de fundo secao projetos

--- a/style.css
+++ b/style.css
@@ -355,19 +355,10 @@ li {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  background-image: url(./assets/grids.svg);
-  /* background-position: center;
-  background-repeat: no-repeat; */
-  /* background-size: cover; */
-}
-
-.profile {
-  grid-area: profile;
-  align-items: center;
-  flex-direction: column;
-  padding: 1.5rem 2rem;
-  position: relative;
-  background-image: url(./assets/dot.svg);
+  background-image: url(./assets/grid.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .projects .title {
